<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditListBarang">


    <TextView
        android:id="@+id/editbarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EDIT BARANG"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/namabarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editbarang"
        android:text="Nama Barang"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edit_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@+id/editbarang"
        android:layout_toEndOf="@+id/namabarang"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/namabarang" />

    <TextView
        android:id="@+id/besarlistrik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namabarang"
        android:text="Watt"
        android:textSize="20sp"
        android:layout_marginTop="45dp"/>

    <EditText
        android:id="@+id/edit_watt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_below="@+id/edit_word"
        android:layout_toEndOf="@+id/namabarang"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/besarlistrik" />

    <TextView
        android:id="@+id/durasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/besarlistrik"
        android:text="Durasi (jam)"
        android:textSize="20sp"
        android:layout_marginTop="45dp"/>

    <EditText
        android:id="@+id/edit_durasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_below="@+id/edit_watt"
        android:layout_toEndOf="@+id/namabarang"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/durasi" />

    <TextView
        android:id="@+id/jumlah_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jumlah Barang"
        android:layout_below="@id/edit_durasi"
        android:textSize="20dp"
        android:layout_marginTop="45dp"/>

    <EditText
        android:id="@+id/edit_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_toEndOf="@+id/namabarang"
        android:layout_below="@+id/edit_durasi"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/jumlah_barang"
        />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jumlah_barang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="returnReply"
        android:background="@drawable/rounded"
        android:textColor="@android:color/background_light"
        android:text="UPDATE" />




</RelativeLayout>