...
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/ToolBar"
        app:srcCompat="@drawable/ic_add_button"
...
